--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --exec ts-node ./src/index.ts"
+    "dev": "concurrently \"sass --watch public/css/principal.scss:public/styles/styles.css\" \"nodemon --exec ts-node ./src/index.ts\""
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
@@ -18,11 +18,13 @@
     "@types/socket.io": "^3.0.2",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1",
+    "sass": "^1.59.2",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
